--- a/hangman_game/android/build.gradle
+++ b/hangman_game/android/build.gradle
@@ -1,8 +1,18 @@
+buildscript{
+    repositories{
+        google()
+        jcenter()
+    }
+    dependencies{
+        classpath 'com.google.gms.google-services' version '4.4.2'
+    }
+}
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
+    
 }
 
 rootProject.buildDir = "../build"
